Create and run Docker image with custom jre